--- a/Home.html
+++ b/Home.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="" href="Home.css">
 </head>
 <body>
+    <div class="Navbar">
+        <h2>Navbar</h2>
+    </div>
     
 </body>
 </html>
