--- a/Home.html
+++ b/Home.html
@@ -10,32 +10,66 @@
 
 <body>
 
-    <!--Top Nav bar -->
+    <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
         <h2 class="Logo">Logo</h2>
 
-        <!-- Search Bar -->
+        <!-- Search Bar START END -->
         <div class="Search_Bar">
             <span class="Search_Container">
                 <ion-icon name="search-outline" class="Search_Icon"></ion-icon>
                 <input type="text" placeholder="Search..." class="Search_Input">
             </span>
         </div>
+        <!-- Search Bar -->
         
-        <!-- Notification and Profile and Add -->
+        <!-- Notification and Profile and Add START-->
         <div class="Notification_Profile">
             <ion-icon name="add-outline" class="Add"></ion-icon>
             <ion-icon name="notifications-circle-outline" class="Notification_Icon"></ion-icon>
             <ion-icon name="person-circle-outline" class="Person_Icon"></ion-icon>
         </div>
+        <!-- Notification and Profile and Add START END-->
     </div>
+    <!--Top Navbar END -->
 
-    <!--Side Nav bar -->
+    <!--Side Navbar START -->
     <div class="Side_Navbar">
-        <div class="Label">
+        <!--Side Navbar Options START -->
+        <div class="Sidebar_Home">
+            <ion-icon name="home-outline"></ion-icon>
+            <a href="#">Home</a>
         </div>
+
+        <div class="Sidebar_profile">
+            <ion-icon name="person-circle-outline"></ion-icon>
+            <a href="#">Profile  </a>
+        </div>
+
+        <div class="Sidebar_">
+
+        </div>
+        <!--Side Navbar Communities START -->
+        <div class="Communities">
+            <h3>COMMUNITIES</h3>
+        </div>
+
+        <!--Side Navbar Communities END -->
+
+
+
+
+
+
+
+
+        <!--Side Navbar Options END -->
     </div>
+    <!--Side Navbar END -->
+
+
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
