--- a/Home.html
+++ b/Home.html
@@ -38,18 +38,20 @@
     <div class="Side_Navbar">
         <!--Side Navbar Options START -->
         <div class="Sidebar_Home">
-            <ion-icon name="home-outline"></ion-icon>
+            <ion-icon name="home-outline" style="font-size: 24px;"></ion-icon>
             <a href="#">Home</a>
         </div>
 
         <div class="Sidebar_profile">
-            <ion-icon name="person-circle-outline"></ion-icon>
+            <ion-icon name="person-circle-outline" style="font-size: 24px;"></ion-icon>
             <a href="#">Profile  </a>
         </div>
 
-        <div class="Sidebar_">
-
+        <div class="Sidebar_Store">
+            <ion-icon name="storefront-outline"style="font-size: 24px;"></ion-icon>
+            <a href="#">Market Place</a>
         </div>
+
         <!--Side Navbar Communities START -->
         <div class="Communities">
             <h3>COMMUNITIES</h3>
