--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="Home.css">
-    
 </head>
 
 <body>
@@ -56,7 +55,11 @@
         <div class="Communities">
             <h3>COMMUNITIES</h3>
         </div>
-
+        
+        <div>
+            <ion-icon name="add-outline" class="CreateCouminity"></ion-icon>
+            <a href="#">Create a Discussion</a>
+        </div>
         <!--Side Navbar Communities END -->
 
 
