--- a/Home.html
+++ b/Home.html
@@ -43,12 +43,12 @@
 
         <div class="Sidebar_profile">
             <ion-icon name="person-circle-outline" style="font-size: 28px;"></ion-icon>
-            <a href="#">Profile  </a>
+            <a href="Profile.html">Profile</a>
         </div>
 
         <div class="Sidebar_Store">
             <ion-icon name="storefront-outline"style="font-size: 26px;"></ion-icon>
-            <a href="#">Market Place</a>
+            <a href="Marketplace.html">Market Place</a>
         </div>
 
         <!--Side Navbar Communities START -->
