--- a/Profile.html
+++ b/Profile.html
@@ -97,6 +97,39 @@
         </div>
         <!-- Feed Container END -->
 
+        <!--Timeline Start-->
+        <div class="Timeline">
+            <div class="Timeline_Item">
+                <div class="Timeline_Content">
+                    <h3>Max Verstappen</h3>
+                    <p>Dududu Max Verstappen. The song features a catchy tune with repetitive lyrics, including "tu-tu-du-du" and "Max Verstappen." It celebrates the racing prowess and achievements of Max Verstappen, who is considered one of the rising stars in the world of Formula One.</p>
+                </div>
+            </div>
+            <div class="Timeline_Item">
+                <div class="Timeline_Content">
+                    <h3>Fast & Furious</h3>
+                    <p>Despite their differences and conflicts, they come together to support and protect one another in the face of danger. The idea of family extends beyond blood relations, as the characters create a tight-knit group that transcends traditional definitions of kinship.Exploring the theme of family in the Fast & Furious franchise allows for a deeper examination of the motivations and actions of the characters. It showcases the power of unconditional love, loyalty, and the lengths people are willing to go to safeguard their loved ones. Additionally, it sheds light on the idea that family can be a source of strength, inspiration, and personal growth.</p>
+                </div>
+            </div>
+            <!-- Add more timeline items here -->
+        </div>
+
+        <!--Timeline End-->
+
+        <!--Side Profile Start-->
+        <div class="Side_Profile">
+            <div class="Profile_Info">
+                <div class="Profile_Pic">
+                    <img src="profile_picture.jpg" alt="Profile Picture">
+                </div>
+                <div class="Profile_Description">
+                    <h3>Username</h3>
+                    <p>User's bio or description goes here...</p>
+                    <a href="#">Edit Profile</a>
+                </div>
+            </div>
+        </div>    
+        <!--Side Profile End-->
      <!--Icon Script -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
