--- a/Profile.html
+++ b/Profile.html
@@ -38,7 +38,7 @@
         <!--Side Navbar Options START -->
         <div class="Sidebar_Home">
             <ion-icon name="home-outline" style="font-size: 26px;"></ion-icon>
-            <a href="#">Home</a>
+            <a href="Home.html">Home</a>
         </div>
 
         <div class="Sidebar_profile">
@@ -58,7 +58,7 @@
         
         <div class="Sidebar_Create">
             <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
-            <a href="#">Create a Community</a>
+            <a href="Forum.html">Create a Forum</a>
         </div>
     </div>
     <!--Side Navbar END -->
@@ -115,7 +115,6 @@
     <!-- Feed Container END -->
 
     <!--Timeline Start-->
-
 
     <div class="Timeline">
         <div class="Timeline_Item">
