--- a/Marketplace.html
+++ b/Marketplace.html
@@ -54,38 +54,71 @@
             <h3>Marketplace</h3>
         </div>
 
-        <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
+        <div class="Sidebar_Notification">
+            <ion-icon name="notifications-outline"></ion-icon>
             <a href="#">Notification </a>
         </div>
 
-        <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
+        <div class="Sidebar_Inbox">
+            <ion-icon name="file-tray-full-outline"></ion-icon>
             <a href="#">Inbox </a>
         </div>
 
-        <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
+        <div class="Sidebar_Buying">
+            <ion-icon name="bag-remove-outline"></ion-icon>
             <a href="#">Buying </a>
         </div>
 
-        <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
+        <div class="Sidebar_Selling">
+            <ion-icon name="pricetag-outline"></ion-icon>
             <a href="#">selling </a>
         </div>
 
         <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
-            <button>Create new listing</button>
+            <button>
+                <ion-icon name="add-outline"></ion-icon>
+                Create new listing
+            </button>
         </div>
+
     </div>
     <!--Side Navbar END -->
 
-        <!-- Feed Container START -->
-        <div class="Label">
-            <h4>Today's picks</h4>
-        </div>
+    <div class="Label">
+        <h4>Today's picks</h4>
+    </div>
 
+
+
+
+    <div class="Feed_Container">
+        <div class="News_Row">
+            <div class="News_Post">
+                <h2>Doobie 100 grams</h2>
+                <img src="Group 5 Img1.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">Read more</a>
+            </div>
+            <div class="News_Post">
+                <h2>BHO Cannabis<i class="fas fa-hourglass-start"></i></h2>
+                <img src="group 5 Img 2.jpg" alt="">
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+        <div class="News_Row">
+            <div class="News_Post">
+                <!-- Post 3 content -->
+            </div>
+            <div class="News_Post">
+                <h2>Kush FG</h2>
+                <img src="GROUP 5 IMG 3.jpg" alt="">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="#">Read More</a>
+            </div>
+        </div>
+    </div>
+    
          <!--Icon Script -->
          <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
          <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
