--- a/Home.html
+++ b/Home.html
@@ -58,8 +58,7 @@
         </div>
         
         <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
-            <a href="Forum.html">Create a Forum</a>
+            <a href="Forum.html">Join discussion</a>
         </div>
     </div>
     <!--Side Navbar END -->
