--- a/Forum.html
+++ b/Forum.html
@@ -68,7 +68,7 @@
     <!--Side Navbar END -->
 
     <div class="Label">
-        <h4>Today's picks</h4>
+        <h4>Today's discussions</h4>
     </div>
 
     <!--Forums START -->
