--- a/Forum.html
+++ b/Forum.html
@@ -63,12 +63,19 @@
             <ion-icon name="file-tray-full-outline"style="font-size: 26px"></ion-icon>
             <a href="#">Inbox</a>
         </div>
+
+        <div class="Sidebar_Create">
+            <button>
+                <ion-icon name="add-outline" style="font-size: px;"></ion-icon>
+                Create discussion
+            </button>
+        </div>
         
     </div>
     <!--Side Navbar END -->
 
     <div class="Label">
-        <h4>Today's discussions</h4>
+        <h4>Today's Discussions</h4>
     </div>
 
     <!--Forums START -->
