--- a/Marketplace.html
+++ b/Marketplace.html
@@ -80,7 +80,6 @@
                 Create new listing
             </button>
         </div>
-
     </div>
     <!--Side Navbar END -->
 
@@ -88,6 +87,7 @@
         <h4>Today's picks</h4>
     </div>
 
+    <!--Marketplace START -->
     <div class="Feed_Container">
         <div class="News_Row">
             <div class="News_Post">
@@ -115,6 +115,7 @@
             </div>
         </div>
     </div>
+    <!--Marketplace END -->
     
          <!--Icon Script -->
          <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
