--- a/Home.html
+++ b/Home.html
@@ -8,11 +8,10 @@
 </head>
 
 <body>
-
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <h2 class="Logo"><img src="" alt=""></h2>
+        <h2 class="Logo"> RevVup Market</h2>
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
@@ -84,7 +83,6 @@
             <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
             <a href="#">Settings</a>
         </div>
-        
     </div>
     <!-- LEFT Side Navbar END -->
 
@@ -118,7 +116,7 @@
     
         <!-- Feed_Container_Forum_START-->
         <div class="Label">
-            <h4>Today's Discussions</h4>
+            <h4>Today's discussions</h4>
         </div>
 
         <div class="Feed_Container">
