--- a/Marketplace.html
+++ b/Marketplace.html
@@ -10,7 +10,7 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <h2 class="Logo">Logo</h2>
+        <h2 class="Logo">RevVup Market</h2>
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
@@ -80,6 +80,26 @@
                 Create new listing
             </button>
         </div>
+
+        <div class="Resources">
+            <h3>Resources</h3>
+        </div>
+
+        <div class="Sidebar_About">
+            <ion-icon name="information-circle-outline" style="font-size: 26px;"></ion-icon>
+            <a href="#">About us</a>
+        </div>
+
+        <div class="Sidebar_Question">
+            <ion-icon name="help-circle-outline" style="font-size: 28px;"></ion-icon>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="Sidebar_Settings">
+            <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
+            <a href="#">Settings</a>
+        </div>
+    </div>
     </div>
     <!--Side Navbar END -->
 
