--- a/Forum.html
+++ b/Forum.html
@@ -70,6 +70,25 @@
                 Create discussion
             </button>
         </div>
+
+        <div class="Resources">
+            <h3>Resources</h3>
+        </div>
+
+        <div class="Sidebar_About">
+            <ion-icon name="information-circle-outline" style="font-size: 26px;"></ion-icon>
+            <a href="#">About us</a>
+        </div>
+
+        <div class="Sidebar_Question">
+            <ion-icon name="help-circle-outline" style="font-size: 28px;"></ion-icon>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="Sidebar_Settings">
+            <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
+            <a href="#">Settings</a>
+        </div>
         
     </div>
     <!--Side Navbar END -->
