--- a/Forum.html
+++ b/Forum.html
@@ -10,7 +10,7 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <h2 class="Logo">Logo</h2>
+        <h2 class="Logo">RevVup Market</h2>
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
