--- a/Marketplace.html
+++ b/Marketplace.html
@@ -80,6 +80,7 @@
                 Create new listing
             </button>
         </div>
+        <!--Side Navbar Communities END -->
 
         <div class="Resources">
             <h3>Resources</h3>
@@ -99,6 +100,7 @@
             <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
             <a href="#">Settings</a>
         </div>
+        <!--Side Navbar Options END -->
     </div>
     </div>
     <!--Side Navbar END -->
@@ -111,13 +113,13 @@
     <div class="Feed_Container">
         <div class="News_Row">
             <div class="News_Post">
-                <h2>Doobie 100 grams</h2>
+                <h2>Toyota 86</h2>
                 <img src="Group 5 Img1.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#">Read more</a>
             </div>
             <div class="News_Post">
-                <h2>BHO Cannabis<i class="fas fa-hourglass-start"></i></h2>
+                <h2>Mirage Colt<i class="fas fa-hourglass-start"></i></h2>
                 <img src="group 5 Img 2.jpg" alt="">
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <a href="#">Read More</a>
