--- a/Profile.html
+++ b/Profile.html
@@ -196,9 +196,33 @@
                 <p><strong>Apr 9, 2019</strong> <br> Cake Day:</p>
                 <p><strong>0</strong> <br> Gold Received</p>
             </div>
+            
+            <h3>Settings</h3>
 
-            <div class="profile-actions">
-                <button>Edit Profile</button>
+            <div class="edit-profile">
+                <img class="editpic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
+                <h4>Profile</h4>
+                <p>Customize your profile</p>
+                <button class="edit">Edit Profile</button>
+            </div>
+
+            <div class="edit-profile">
+                <img class="editpic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
+                <h4>Avatar</h4>
+                <p>Customize and style</p>
+                <button class="edit">Style Avatar</button>
+            </div>
+
+            <div class="edit-profile">
+                <img class="editpic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
+                <h4>Moderation</h4>
+                <p>Moderation Tools</p>
+                <button class="edit">Mod Settings</button>
+            </div>
+
+            <h3>Links</h3>
+
+            <div class="add">
                 <button>Add Social Links</button>
             </div>
     
