--- a/Profile.html
+++ b/Profile.html
@@ -158,7 +158,7 @@
 
     <!--Side Profile Start-->
 
-    <div class="container">
+    <div class="right-sidebar">
 
         <div class="profile-sidebar">
 
@@ -201,22 +201,28 @@
 
             <div class="edit-profile">
                 <img class="editpic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
-                <h4>Profile</h4>
-                <p>Customize your profile</p>
+                <div class="desc">
+                    <h4>Profile</h4>
+                    <p>Customize your profile</p>
+                </div>
                 <button class="edit">Edit Profile</button>
             </div>
 
             <div class="edit-profile">
                 <img class="editpic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
-                <h4>Avatar</h4>
-                <p>Customize and style</p>
+                <div class="desc">
+                    <h4>Avatar</h4>
+                    <p>Customize and style</p>
+                </div>
                 <button class="edit">Style Avatar</button>
             </div>
 
             <div class="edit-profile">
                 <img class="editpic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
-                <h4>Moderation</h4>
-                <p>Moderation Tools</p>
+                <div class="desc">
+                    <h4>Moderation</h4>
+                    <p>Moderation Tools</p>
+                </div>
                 <button class="edit">Mod Settings</button>
             </div>
 
