--- a/Forum.html
+++ b/Forum.html
@@ -107,7 +107,7 @@
                 <div class="extended-content">
                     <form class="comment-form">
                         <textarea placeholder="Join the discussion.."></textarea>
-                        <button type="submit">Submit</button>
+                        <button type="submit">Post</button>
                     </form>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="extended-content">
                     <form class="comment-form">
                         <textarea placeholder="Join the discussion.."></textarea>
-                        <button type="submit">Submit</button>
+                        <button type="submit">Post</button>
                     </form>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                 <div class="extended-content">
                     <form class="comment-form">
                         <textarea placeholder="Join the discussion.."></textarea>
-                        <button type="submit">Submit</button>
+                        <button type="submit">Postt</button>
                     </form>
                 </div>
             </div>
