--- a/Forum.html
+++ b/Forum.html
@@ -25,7 +25,9 @@
         <div class="Notification_Profile">
             <ion-icon name="add-outline" class="Add"></ion-icon>
             <ion-icon name="notifications-circle-outline" class="Notification_Icon"></ion-icon>
-            <ion-icon name="person-circle-outline" class="Person_Icon"></ion-icon>
+            <a href="Profile.html">
+                <ion-icon name="person-circle-outline" class="Person_Icon"></ion-icon>
+            </a>
         </div>
         <!-- Notification and Profile and Add START END-->
     </div>
