--- a/Forum.html
+++ b/Forum.html
@@ -134,7 +134,7 @@
                 <div class="extended-content">
                     <form class="comment-form">
                         <textarea placeholder="Join the discussion.."></textarea>
-                        <button type="submit">Postt</button>
+                        <button type="submit">Post</button>
                     </form>
                 </div>
             </div>
