--- a/Home.html
+++ b/Home.html
@@ -64,7 +64,7 @@
 
         <div class="Sidebar_Comunities">
             <ion-icon name="people-circle-outline" style="font-size: 28px;"></ion-icon>
-            <a href="#">Comunities</a>
+            <a href="#">Communities</a>
         </div>
 
         <div class="Resources">
