--- a/Marketplace.html
+++ b/Marketplace.html
@@ -73,7 +73,7 @@
 
         <div class="Sidebar_Selling">
             <ion-icon name="pricetag-outline"></ion-icon>
-            <a href="#">selling </a>
+            <a href="#">Selling </a>
         </div>
 
         <div class="Sidebar_Create">
