--- a/Profile.html
+++ b/Profile.html
@@ -11,7 +11,7 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <h2 class="Logo">Logo</h2>
+        <h2 class="Logo">RevVup Market</h2>
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
@@ -104,14 +104,6 @@
         
     </div>
 
-    <div class="Feed_Container">
-        <div class="News_Feed">
-            <div>
-                
-            </div>
-        </div>
-    </div>
-    <!-- Feed Container END -->
 
     <!--Timeline Start-->
 
