--- a/Home.html
+++ b/Home.html
@@ -160,6 +160,14 @@
         <!-- RIGHT Side Navbar RIGHT -->
 
      <!--Icon Script -->
+     <script>
+        const toggleButton = document.getElementsByClassName('Logo')[0]
+        const sideBar = document.getElementsByClassName('Side_Navbar')[0]
+
+        toggleButton.addEventListener('click', () => {
+            sideBar.classList.toggle('active')
+        })
+        </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
