--- a/Marketplace.html
+++ b/Marketplace.html
@@ -151,22 +151,7 @@
          <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
          <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-         <script>
-        const toggleButton = document.getElementsByClassName('Logo')[0]
-        const sideBar = document.getElementsByClassName('Side_Navbar')[0]
-
-        toggleButton.addEventListener('click', () => {
-            sideBar.classList.toggle('active')
-        })
-            document.getElementById('show-create-post-form').addEventListener('click', function() {
-            var createPostForm = document.getElementById('create-post-form');
-            if (createPostForm.style.display === 'none') {
-                createPostForm.style.display = 'block';
-            } else {
-                createPostForm.style.display = 'none';
-            }
-        });
-         </script>
+         <script src="marketplace.js"></script>
 
     
 </body>
