--- a/Marketplace.html
+++ b/Marketplace.html
@@ -122,24 +122,27 @@
         <div class="News_Row">
             <div class="News_Post">
                 <h2>Toyota 86</h2>
-                <img src="Group 5 Img1.jpg" alt="">
+                <img src="img/img1.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#">Read more</a>
             </div>
             <div class="News_Post">
                 <h2>Mirage Colt<i class="fas fa-hourglass-start"></i></h2>
-                <img src="group 5 Img 2.jpg" alt="">
+                <img src="img/img2.jpg" alt="">
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <a href="#">Read More</a>
             </div>
         </div>
         <div class="News_Row">
             <div class="News_Post">
-                <!-- Post 3 content -->
+                <h2>Kush FG</h2>
+                <img src="img/img3.jpg" alt="">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="#">Read More</a>
             </div>
             <div class="News_Post">
-                <h2>Kush FG</h2>
-                <img src="GROUP 5 IMG 3.jpg" alt="">
+                <h2>Porsche 911</h2>
+                <img src="img/img4.jpg" alt="">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a href="#">Read More</a>
             </div>
