--- a/Marketplace.html
+++ b/Marketplace.html
@@ -10,7 +10,7 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <h2 class="Logo">RevVup Market</h2>
+        <img class="Logo" src="img/image.png" alt="">
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
