--- a/Profile.html
+++ b/Profile.html
@@ -11,7 +11,7 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <h2 class="Logo">RevVup Market</h2>
+        <img class="Logo" src="img/image.png" alt="">
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
@@ -66,7 +66,7 @@
     <div class="Label">
         <div class="user">
             <img class="profilePic" src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png">
-            <h4>User1234_</h4>      
+            <h4 id="nav-user">Username</h4>      
         </div>
         
         <div class="profileNav">
@@ -150,7 +150,7 @@
         <div class="profile-sidebar">
 
             <div class="sidebar-title">
-                <h2>User1234_</h2>
+                <h2 id="nav-user">You</h2>
                 <button class="share-button">Share</button>
             </div>
 
@@ -224,7 +224,7 @@
     </div>
     <!--Side Profile End-->
 
-
+    <script src="Home.js"></script>
      <!--Icon Script -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
