--- a/Marketplace.html
+++ b/Marketplace.html
@@ -10,7 +10,9 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <img class="Logo" src="img/image.png" alt="">
+        <a href="Home.html">
+            <img class="Logo" src="img/image.png" alt="Logo">
+        </a>
 
         <!-- Search Bar START END -->
         <div class="Search_Bar">
