--- a/Profile.html
+++ b/Profile.html
@@ -37,7 +37,7 @@
         <!--Side Navbar Options START -->
         <div class="Sidebar_Home">
             <ion-icon name="home-outline" style="font-size: 26px;"></ion-icon>
-            <a href="Home.html">Home</a>
+            <a href="#">Home</a>
         </div>
 
         <div class="Sidebar_profile">
@@ -56,11 +56,35 @@
         </div>
         
         <div class="Sidebar_Create">
-            <ion-icon name="add-outline" style="font-size: 28px;"></ion-icon>
-            <a href="Forum.html">Create a Forum</a>
+            <ion-icon name="reader-outline" style="font-size: 26px;"></ion-icon>
+            <a href="Forum.html">Join a Discussion</a>
+        </div>
+
+        <div class="Sidebar_Comunities">
+            <ion-icon name="people-circle-outline" style="font-size: 28px;"></ion-icon>
+            <a href="#">Communities</a>
+        </div>
+
+        <div class="Resources">
+            <h3>Resources</h3>
+        </div>
+
+        <div class="Sidebar_About">
+            <ion-icon name="information-circle-outline" style="font-size: 26px;"></ion-icon>
+            <a href="#">About us</a>
+        </div>
+
+        <div class="Sidebar_Question">
+            <ion-icon name="help-circle-outline" style="font-size: 28px;"></ion-icon>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="Sidebar_Settings">
+            <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
+            <a href="#">Settings</a>
         </div>
     </div>
-    <!--Side Navbar END -->
+    <!-- LEFT Side Navbar END -->
 
     <!-- Feed Container START -->
     <div class="Label">
@@ -226,6 +250,14 @@
 
 
      <!--Icon Script -->
+     <script>
+        const toggleButton = document.getElementsByClassName('Logo')[0]
+        const sideBar = document.getElementsByClassName('Side_Navbar')[0]
+
+        toggleButton.addEventListener('click', () => {
+            sideBar.classList.toggle('active')
+        })
+     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
