--- a/Forum.html
+++ b/Forum.html
@@ -103,7 +103,7 @@
     <div class="Feed_Container">
         <div class="News_Row">
             <div class="News_Post">
-                <h2>Doobie 100 grams</h2>
+                <h2>V8 F1 Engine</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#" class="read-more">Read more</a>
                 <div class="extended-content">
@@ -113,8 +113,9 @@
                     </form>
                 </div>
             </div>
+        </div>
             <div class="News_Post">
-                <h2>BHO Cannabis<i class="fas fa-hourglass-start"></i></h2>
+                <h2>Toyota<i class="fas fa-hourglass-start"></i></h2>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <a href="#" class="read-more">Read more</a>
                 <div class="extended-content">
