--- a/Home.html
+++ b/Home.html
@@ -97,19 +97,19 @@
         <div class="Feed_Container">
             <div class="News_Feed">
                 <div class="News_Post">
-                    <h2>Doobie 100 grams</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h2>Mobil 1 Advanced Full Synthetic Motor Oil 5W-20</h2>
+                    <p>Mobil 1 advanced full-synthetic motor oil 5W-20 utilizes Mobil 1’s signature Triple Action Formula to deliver outstanding engine performance, protection, and cleanliness.</p>
                     <a href="#">Learn more</a>
                 </div>
     
                 <div class="News_Post">
-                    <h2>BHO Cannabis<i class="fas fa-hourglass-start"></i></h2>
+                    <h2>Sparco Sport Seat R333<i class="fas fa-hourglass-start"></i></h2>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <a href="#">Learn More</a>
                 </div>
         
                 <div class="News_Post">
-                    <h2>Kush FG</h2>
+                    <h2>JDM Parts</h2>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     <a href="#">Learn More</a>
                 </div>
