--- a/Marketplace.html
+++ b/Marketplace.html
@@ -137,7 +137,7 @@
         </div>
         <div class="News_Row">
             <div class="News_Post">
-                <h2>Kush FG</h2>
+                <h2>MAGZ</h2>
                 <img src="img/img3.jpg" alt="">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <a href="#">Read More</a>
