--- a/Profile.html
+++ b/Profile.html
@@ -39,7 +39,7 @@
         <!--Side Navbar Options START -->
         <div class="Sidebar_Home">
             <ion-icon name="home-outline" style="font-size: 26px;"></ion-icon>
-            <a href="#">Home</a>
+            <a href="Home.html">Home</a>
         </div>
 
         <div class="Sidebar_profile">
