--- a/Marketplace.html
+++ b/Marketplace.html
@@ -110,6 +110,10 @@
             <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
             <a href="#">Settings</a>
         </div>
+        <div class="Sidebar_Settings">
+            <ion-icon name="people" style="font-size: 26px;"></ion-icon>
+            <a href="Login.html">Sign out</a>
+        </div>
         <!--Side Navbar Options END -->
     </div>
     </div>
