--- a/Profile.html
+++ b/Profile.html
@@ -28,7 +28,9 @@
         <div class="Notification_Profile">
             <ion-icon name="add-outline" class="Add"></ion-icon>
             <ion-icon name="notifications-circle-outline" class="Notification_Icon"></ion-icon>
-            <ion-icon name="person-circle-outline" class="Person_Icon"></ion-icon>
+            <a href="Profile.html">
+                <ion-icon name="person-circle-outline" class="Person_Icon"></ion-icon>
+            </a>
         </div>
         <!-- Notification and Profile and Add START END-->
     </div>
@@ -84,6 +86,10 @@
         <div class="Sidebar_Settings">
             <ion-icon name="settings-outline" style="font-size: 26px;"></ion-icon>
             <a href="#">Settings</a>
+        </div>
+        <div class="Sidebar_Settings">
+            <ion-icon name="people" style="font-size: 26px;"></ion-icon>
+            <a href="Login.html">Sign out</a>
         </div>
     </div>
     <!-- LEFT Side Navbar END -->
