--- a/Login.html
+++ b/Login.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img class="Logo" src="img/image.png" alt="">
     <!--Form START -->
     <div class="center">
         <h1>Log in</h1>
