--- a/Signup.html
+++ b/Signup.html
@@ -9,6 +9,7 @@
   </head>
   </head>
   <body>
+    <img class="Logo" src="img/image.png" alt="">
     <div class="container">
       <div class="center">
           <h1>Register</h1>
