--- a/Profile.html
+++ b/Profile.html
@@ -11,7 +11,7 @@
     <!--Top Navbar START -->
     <div class="Top_Navbar">
         <!-- Logo -->
-        <a href="Home.html">
+        <a>
             <img class="Logo" src="img/image.png" alt="">
         </a>
 
@@ -114,10 +114,10 @@
             <div class="profileOption">
                 <p>Upvote</p>
             </div>
-            <div class="profileOption">
+            <div class="profileOption hidden-option">
                 <p>Downvote</p>
             </div>
-            <div class="profileOption">
+            <div class="profileOption hidden-option">
                 <p>Hidden</p>
             </div>
         </div>        
@@ -251,7 +251,17 @@
 
         toggleButton.addEventListener('click', () => {
             sideBar.classList.toggle('active')
+
+        
         })
+
+        const isLoggedIn = true; // Change this based on your authentication state
+        const hiddenOptions = document.querySelectorAll('.hidden-option');
+        if (!isLoggedIn) {
+            hiddenOptions.forEach(option => {
+                option.style.display = 'none';
+        });
+}
      </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
